Created About Me section

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -13,8 +13,12 @@
 }
 
 /* shared style */
+.secondary-bg {
+  background-color: #fff8f3;
+}
+
 .text-primary {
-  color: orange;
+  color: #fd6e0a;
 }
 
 .dark-2 {
@@ -29,6 +33,16 @@
   border: none;
   padding: 18px 30px;
   border-radius: 5px;
+}
+
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+.section-description {
+  font-size: 18px;
+  color: #757575;
 }
 
 /* header */
@@ -71,7 +85,7 @@ nav li a {
 .banner {
   display: flex;
 
-  justify-content: space-between;
+  justify-content: space-around;
   /* margin: 0 (35 * 0.45) px 0 (200 * 0.45) px; */
   margin: 0 35 px 0 200 px;
 }
@@ -95,4 +109,29 @@ nav li a {
 .banner-profile-pic {
   width: 605px;
   /* height: 676px; */
+}
+
+/* main */
+
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* about */
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+.about-items {
+  display: flex;
+
+  justify-content: space-around;
+}
+
+.item-description {
+  font-weight: 600;
 }
