--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -13,6 +13,10 @@
 }
 
 /* shared style */
+.text-center {
+  text-align: center;
+}
+
 .secondary-bg {
   background-color: #fff8f3;
 }
@@ -118,12 +122,16 @@ main {
   margin: 0 auto;
 }
 
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
 /* about */
 .about {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
 }
 
 .about-items {
@@ -134,4 +142,17 @@ main {
 
 .item-description {
   font-weight: 600;
+}
+
+/* skills */
+.skills-container {
+  display: flex;
+
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
