--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -98,6 +98,7 @@ nav li a {
   /* max-width: (580 * 0.45) px; */
   max-width: 580px;
   margin-left: 90px;
+  padding-bottom: 50px;
 }
 
 .banner-greetings {
